[package]
name = "slpx-map-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.4.18", features = ["derive"] }
quick-xml = { version = "0.32.0", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0.203", features = ["derive"] }
